--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
               <a href="/index.html">Home</a>
             </li>
             <li style="padding-top: 10px;">
-              <a href="http://english-language-api-recipe-book.github.io/b/">Forward to B >></a>
+              <a href="http://english-language-api-recipe-book.github.io/b/">B >></a>
             </li>
             <li style="padding-top: 10px;">
               <a href="http://english-language-api-recipe-book.github.io/master/"><< Back to Main Page</a>
